force-app/main/default/objects/ContractPosition__c/ContractPosition__c.object-meta.xml
<CustomObject>
    <label>Contract Position</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Position Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>