force-app/main/default/objects/ContractPosition__c/fields/AccrualRatePct__c.field-meta.xml
<CustomField>
    <fullName>AccrualRatePct__c</fullName>
    <description>The rate at which SAP sets money aside during the year (accrual, VR documents) before the actual settlement at period end (VE documents). May differ from the settlement rate. [Sources: sap-research-notes.md, MN-003 Z.620]</description>
    <inlineHelpText>The rate at which SAP sets money aside during the year (accrual, VR documents) before the actual settlement at period end (VE documents). May differ from the settlement rate.</inlineHelpText>
    <label>Accrual Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>