force-app/main/default/objects/ContractPosition__c/fields/AgreementValidFrom__c.field-meta.xml
<CustomField>
    <fullName>AgreementValidFrom__c</fullName>
    <description>Start of the SAP agreement term this position belongs to — context alongside the effective position validity (which comes from the condition record). [Sources: D-03 2026-08-11]</description>
    <inlineHelpText>Start of the SAP agreement term this position belongs to — context alongside the effective position validity (which comes from the condition record).</inlineHelpText>
    <label>Agreement Valid From</label>
    <type>Date</type>
</CustomField>