force-app/main/default/objects/ContractPosition__c/fields/AgreementValidTo__c.field-meta.xml
<CustomField>
    <fullName>AgreementValidTo__c</fullName>
    <description>End of the SAP agreement term this position belongs to. [Sources: D-03 2026-08-11]</description>
    <inlineHelpText>End of the SAP agreement term this position belongs to.</inlineHelpText>
    <label>Agreement Valid To</label>
    <type>Date</type>
</CustomField>