force-app/main/default/objects/ContractPosition__c/fields/CausationLevel__c.field-meta.xml
<CustomField>
    <fullName>CausationLevel__c</fullName>
    <description>Whose purchases trigger the refund: only the contract customer&apos;s, an object&apos;s (e.g. a single location) or country-wide across the chain. [Sources: MN-003 Z.451-497]</description>
    <inlineHelpText>Whose purchases trigger the refund: only the contract customer&apos;s, an object&apos;s (e.g. a single location) or country-wide across the chain.</inlineHelpText>
    <label>Causation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>