force-app/main/default/objects/ContractPosition__c/fields/CommitmentRole__c.field-meta.xml
<CustomField>
    <fullName>CommitmentRole__c</fullName>
    <description>Direction of the commitment: Agreement = Darboven provides something (e.g. pays a refund/subsidy). Obligation = the customer commits (e.g. a purchase quantity). A position is always exactly one of the two. [Sources: MN-006 Z.2-20]</description>
    <inlineHelpText>Direction of the commitment: Agreement = Darboven provides something (e.g. pays a refund/subsidy). Obligation = the customer commits (e.g. a purchase quantity). A position is always exactly one of the two.</inlineHelpText>
    <label>Commitment Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
                <label>Agreement (Darboven provides)</label>
            </value>
            <value>
                <fullName>Obligation</fullName>
                <label>Obligation (customer commits)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>