force-app/main/default/objects/ContractPosition__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>The contract header this position belongs to. If the contract is deleted or superseded, its positions follow automatically. [Sources: C-09]</description>
    <inlineHelpText>The contract header this position belongs to. If the contract is deleted or superseded, its positions follow automatically.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>CustomerContract__c</referenceTo>
    <relationshipLabel>Contract Positions</relationshipLabel>
    <relationshipName>ContractPositions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>