force-app/main/default/objects/ContractPosition__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <description>Which cost center carries the fixed amount — only required for fixed-amount subsidies. [Sources: MN-003 Z.608]</description>
    <inlineHelpText>Which cost center carries the fixed amount — only required for fixed-amount subsidies.</inlineHelpText>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>