force-app/main/default/objects/ContractPosition__c/fields/ERPAgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPAgreementNumber__c</fullName>
    <description>The SAP agreement (rebate arrangement) number reported back by ZKS after manual creation in SAP. Settlement documents from the posting table find their position via this number. Index runs outside SAP and has no such number. [Sources: MN-003 Z.818, sap-research-notes.md, D-01 2026-08-11: 18 statt 10 (VBNR real 13-stellig), unique entfällt (n Positionen je VBNR) — Upsert-Schlüssel ist ERPConditionKey__c]</description>
    <externalId>true</externalId>
    <inlineHelpText>The SAP agreement (rebate arrangement) number reported back by ZKS after manual creation in SAP. Settlement documents from the posting table find their position via this number. Index runs outside SAP and has no such number.</inlineHelpText>
    <label>ERP Agreement Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>