force-app/main/default/objects/ContractPosition__c/fields/ERPAgreementType__c.field-meta.xml
<CustomField>
    <fullName>ERPAgreementType__c</fullName>
    <description>The SAP agreement type under which ZKS creates the agreement in SAP — e.g. &apos;110, fixed debit-side&apos; for fixed-amount subsidies. [Sources: MN-003 Z.577, sap-research-notes.md]</description>
    <inlineHelpText>The SAP agreement type under which ZKS creates the agreement in SAP — e.g. &apos;110, fixed debit-side&apos; for fixed-amount subsidies.</inlineHelpText>
    <label>ERP Agreement Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>