force-app/main/default/objects/ContractPosition__c/fields/ERPConditionKey__c.field-meta.xml
<CustomField>
    <fullName>ERPConditionKey__c</fullName>
    <description>Technical upsert key of the interface: SAP agreement number plus condition sequence number. Ensures the nightly sync finds each condition line reliably instead of overwriting or duplicating positions. [Sources: D-01 2026-08-11, B-01]</description>
    <externalId>true</externalId>
    <inlineHelpText>Technical upsert key of the interface: SAP agreement number plus condition sequence number. Ensures the nightly sync finds each condition line reliably instead of overwriting or duplicating positions.</inlineHelpText>
    <label>ERP Condition Key</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>