force-app/main/default/objects/ContractPosition__c/fields/ERPProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ERPProductHierarchy__c</fullName>
    <description>The SAP key of the hierarchy level this refund refers to. Makes overlapping refunds machine-checkable (e.g. class &apos;roasted coffee&apos; AND a single article from it) — the double-refund risk. [Sources: sap-research-notes.md]</description>
    <inlineHelpText>The SAP key of the hierarchy level this refund refers to. Makes overlapping refunds machine-checkable (e.g. class &apos;roasted coffee&apos; AND a single article from it) — the double-refund risk.</inlineHelpText>
    <label>ERP Product Hierarchy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>