force-app/main/default/objects/ContractPosition__c/fields/ERPTaxCode__c.field-meta.xml
<CustomField>
    <fullName>ERPTaxCode__c</fullName>
    <description>The SAP tax code of the payout, e.g. A1 (taxable revenue 19%) or A2 (7%). Deliberately a text field, not a picklist: 19 accounting values, display only. [Sources: K-10 2026-08-11, Steuerkennzeichen-Schema TAXD (19 Werte)]</description>
    <inlineHelpText>The SAP tax code of the payout, e.g. A1 (taxable revenue 19%) or A2 (7%). Deliberately a text field, not a picklist: 19 accounting values, display only.</inlineHelpText>
    <label>ERP Tax Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>