force-app/main/default/objects/ContractPosition__c/fields/GlAccount__c.field-meta.xml
<CustomField>
    <fullName>GlAccount__c</fullName>
    <description>Which G/L account the fixed amount is posted to in SAP — only required for fixed-amount subsidies. [Sources: MN-003 Z.608]</description>
    <inlineHelpText>Which G/L account the fixed amount is posted to in SAP — only required for fixed-amount subsidies.</inlineHelpText>
    <label>G/L Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>