force-app/main/default/objects/ContractPosition__c/fields/IndexBaseMonths__c.field-meta.xml
<CustomField>
    <fullName>IndexBaseMonths__c</fullName>
    <description>Over how many past months the rolling ICO average is built to measure the market movement. Standard is 3 months; some legacy contracts use 6. [Sources: XLS-004, C-02 geklärt]</description>
    <inlineHelpText>Over how many past months the rolling ICO average is built to measure the market movement. Standard is 3 months; some legacy contracts use 6.</inlineHelpText>
    <label>Index Base (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>