force-app/main/default/objects/ContractPosition__c/fields/IndexPct__c.field-meta.xml
<CustomField>
    <fullName>IndexPct__c</fullName>
    <description>The index percentage agreed with the customer: the coffee price may be adjusted by this much once the green coffee market (ICO + USD rate) has moved accordingly. [Sources: EM-001 Z.158, XLSX-002]</description>
    <inlineHelpText>The index percentage agreed with the customer: the coffee price may be adjusted by this much once the green coffee market (ICO + USD rate) has moved accordingly.</inlineHelpText>
    <label>Index Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>