force-app/main/default/objects/ContractPosition__c/fields/IndexThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>IndexThresholdPct__c</fullName>
    <description>Only when the market has moved by at least this value is the price touched at all — smaller fluctuations are sat out. [Sources: MN-001 Z.80]</description>
    <inlineHelpText>Only when the market has moved by at least this value is the price touched at all — smaller fluctuations are sat out.</inlineHelpText>
    <label>Adjustment Threshold (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>