force-app/main/default/objects/ContractPosition__c/fields/LastPriceAdjustmentDate__c.field-meta.xml
<CustomField>
    <fullName>LastPriceAdjustmentDate__c</fullName>
    <description>When an index-based price adjustment was actually carried out last. [Sources: XLSX-002]</description>
    <inlineHelpText>When an index-based price adjustment was actually carried out last.</inlineHelpText>
    <label>Last Price Adjustment</label>
    <type>Date</type>
</CustomField>