force-app/main/default/objects/ContractPosition__c/fields/NextReviewMonth__c.field-meta.xml
<CustomField>
    <fullName>NextReviewMonth__c</fullName>
    <description>When the next index check is due for this customer — feeds the KAM work list. [Sources: XLSX-002]</description>
    <inlineHelpText>When the next index check is due for this customer — feeds the KAM work list.</inlineHelpText>
    <label>Next Review Month</label>
    <type>Date</type>
</CustomField>