force-app/main/default/objects/ContractPosition__c/fields/PaymentTiming__c.field-meta.xml
<CustomField>
    <fullName>PaymentTiming__c</fullName>
    <description>Whether the fixed amount is paid in advance (start of period) or in arrears (end of period) — SAP flag of the fixed-amount payout. [Sources: K-10 2026-08-11, Kennzeichen vor-/nachschüssig (vollständig: V/N/leer)]</description>
    <inlineHelpText>Whether the fixed amount is paid in advance (start of period) or in arrears (end of period) — SAP flag of the fixed-amount payout.</inlineHelpText>
    <label>Payment Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>vorschüssig</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>nachschüssig</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>