force-app/main/default/objects/ContractPosition__c/fields/PayoutAmount__c.field-meta.xml
<CustomField>
    <fullName>PayoutAmount__c</fullName>
    <description>The agreed subsidy amount paid out to the customer. It is not repaid and is not a price surcharge. [Sources: MN-003 Z.782]</description>
    <inlineHelpText>The agreed subsidy amount paid out to the customer. It is not repaid and is not a price surcharge.</inlineHelpText>
    <label>Payout Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>