force-app/main/default/objects/ContractPosition__c/fields/PositionType__c.field-meta.xml
<CustomField>
    <fullName>PositionType__c</fullName>
    <description>THE controlling field of the position: defines whether this is index conditioning, a refund, a marketing subsidy (WKZ) or a machine agreement — and shows the matching field sections (Dynamic Forms). [Sources: MN-005 Z.146, C-09]</description>
    <inlineHelpText>THE controlling field of the position: defines whether this is index conditioning, a refund, a marketing subsidy (WKZ) or a machine agreement — and shows the matching field sections (Dynamic Forms).</inlineHelpText>
    <label>Position Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Index</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>MarketingSubsidy</fullName>
                <label>Marketing Subsidy (WKZ)</label>
            </value>
            <value>
                <fullName>Machine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>