force-app/main/default/objects/ContractPosition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific product or group this refund refers to. Because product groups are product records themselves in this org, the same reference works for every hierarchy level. [Sources: Org: Product2-Self-Hierarchie]</description>
    <inlineHelpText>The specific product or group this refund refers to. Because product groups are product records themselves in this org, the same reference works for every hierarchy level.</inlineHelpText>
    <label>Product / Group</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Positions</relationshipLabel>
    <relationshipName>ContractPositions</relationshipName>
    <type>Lookup</type>
</CustomField>