force-app/main/default/objects/ContractPosition__c/fields/ProductScopeLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductScopeLevel__c</fullName>
    <description>At which level of the product world the refund applies: a single article, a subgroup, a whole product class or a brand. SAP calculates on hierarchy levels, PuK today per article — this gap (C-03) is clarified in the KAM workshop. [Sources: MN-003 Z.196-212]</description>
    <inlineHelpText>At which level of the product world the refund applies: a single article, a subgroup, a whole product class or a brand. SAP calculates on hierarchy levels, PuK today per article — this gap (C-03) is clarified in the KAM workshop.</inlineHelpText>
    <label>Product Scope Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
                <label>Single Product</label>
            </value>
            <value>
                <fullName>Subgroup</fullName>
                <label>Product Subgroup</label>
            </value>
            <value>
                <fullName>Group</fullName>
                <label>Product Group</label>
            </value>
            <value>
                <fullName>Class</fullName>
                <label>Product Class</label>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>