force-app/main/default/objects/ContractPosition__c/fields/RecipientAccount__c.field-meta.xml
<CustomField>
    <fullName>RecipientAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who receives the money — for chains often the head office while the revenues arise in the branches. Discretion: subsidiaries should not see the parent&apos;s refund. [Sources: MN-001 Z.167, MN-003 Z.464, sap-research-notes.md]</description>
    <inlineHelpText>Who receives the money — for chains often the head office while the revenues arise in the branches. Discretion: subsidiaries should not see the parent&apos;s refund.</inlineHelpText>
    <label>Recipient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Positions</relationshipLabel>
    <relationshipName>RefundRecipientPositions</relationshipName>
    <type>Lookup</type>
</CustomField>