force-app/main/default/objects/ContractPosition__c/fields/RefundAmountPerKg__c.field-meta.xml
<CustomField>
    <fullName>RefundAmountPerKg__c</fullName>
    <description>Entry aid for legacy contracts still agreed as &apos;cents per kilo&apos; — stored, but internally converted into the leading percentage. [Sources: C-01, K-5 2026-08-11: 4 Nachkommastellen (SAP führt 0,5000 EUR/KG)]</description>
    <inlineHelpText>Entry aid for legacy contracts still agreed as &apos;cents per kilo&apos; — stored, but internally converted into the leading percentage.</inlineHelpText>
    <label>Refund Amount (€/kg)</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>