force-app/main/default/objects/ContractPosition__c/fields/RefundBasis__c.field-meta.xml
<CustomField>
    <fullName>RefundBasis__c</fullName>
    <description>What the refund refers to: revenue in euros or purchased quantity in kilograms. Tea is always revenue-based. [Sources: MN-003 Z.185-212, Org: CoffeeRefundType__c, sap-research-notes.md]</description>
    <inlineHelpText>What the refund refers to: revenue in euros or purchased quantity in kilograms. Tea is always revenue-based.</inlineHelpText>
    <label>Refund Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Umsatz (umsatzbezogen)</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Absatz (mengenbezogen, kg)</label>
            </value>
            <value>
                <fullName>Quantity</fullName>
                <isActive>false</isActive>
                <label>Quantity</label>
            </value>
            <value>
                <fullName>Revenue</fullName>
                <isActive>false</isActive>
                <label>Revenue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>