force-app/main/default/objects/ContractPosition__c/fields/RefundPct__c.field-meta.xml
<CustomField>
    <fullName>RefundPct__c</fullName>
    <description>The leading refund rate: this share of revenue (or its equivalent) flows back to the customer. Basis for accruals, settlements and refund reporting. [Sources: C-01, XLSX-003]</description>
    <inlineHelpText>The leading refund rate: this share of revenue (or its equivalent) flows back to the customer. Basis for accruals, settlements and refund reporting.</inlineHelpText>
    <label>Refund Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>