force-app/main/default/objects/ContractPosition__c/fields/RefundValueType__c.field-meta.xml
<CustomField>
    <fullName>RefundValueType__c</fullName>
    <description>How the refund value was entered: as a percentage (target model) or as euros per kilogram (legacy form). Euro entries are converted to percent — percent is the leading value. [Sources: C-01, MN-007]</description>
    <inlineHelpText>How the refund value was entered: as a percentage (target model) or as euros per kilogram (legacy form). Euro entries are converted to percent — percent is the leading value.</inlineHelpText>
    <label>Refund Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>AmountPerKg</fullName>
                <label>Amount per kg (€)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>