force-app/main/default/objects/ContractPosition__c/fields/ReviewCycle__c.field-meta.xml
<CustomField>
    <fullName>ReviewCycle__c</fullName>
    <description>How often the index check takes place for this customer — most customers quarterly, some semi-annually, few monthly. [Sources: XLSX-002]</description>
    <inlineHelpText>How often the index check takes place for this customer — most customers quarterly, some semi-annually, few monthly.</inlineHelpText>
    <label>Review Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>SemiAnnual</fullName>
                <label>Semi-annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>