force-app/main/default/objects/ContractPosition__c/fields/SettlementFrequency__c.field-meta.xml
<CustomField>
    <fullName>SettlementFrequency__c</fullName>
    <description>The rhythm in which SAP settles the refund towards the customer (credit memo) — monthly, quarterly or yearly. [Sources: MN-003 Z.472]</description>
    <inlineHelpText>The rhythm in which SAP settles the refund towards the customer (credit memo) — monthly, quarterly or yearly.</inlineHelpText>
    <label>Settlement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>HalfYearly</fullName>
                <label>Half-yearly</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>