force-app/main/default/objects/ContractPosition__c/fields/SettlementIntervalMonths__c.field-meta.xml
<CustomField>
    <fullName>SettlementIntervalMonths__c</fullName>
    <description>The settlement rhythm as a final number of months — our smallest unit. The middleware translates the SAP rhythm (count + unit, e.g. 01Q) into months: 01M → 1, 01Q/01V → 3, 01H → 6, 01J → 12, 02M → 2 etc. [Sources: K-4 2026-08-11]</description>
    <inlineHelpText>The settlement rhythm as a final number of months — our smallest unit. The middleware translates the SAP rhythm (count + unit, e.g. 01Q) into months: 01M → 1, 01Q/01V → 3, 01H → 6, 01J → 12, 02M → 2 etc.</inlineHelpText>
    <label>Settlement Interval (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>