force-app/main/default/objects/ContractPosition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>SAP agreement status of the position (code = value, plain text = label). &apos;Draft&apos; = captured in PuK, not yet in SAP. An agreement can end while the contract continues. [Sources: K-1 2026-08-11: SAP-Codes als Werte, Fiori-F4 „Status Vereinbarung&quot; (vollständig: 6 Werte); Widerspruch Echtbelege 150/leer offen]</description>
    <inlineHelpText>SAP agreement status of the position (code = value, plain text = label). &apos;Draft&apos; = captured in PuK, not yet in SAP. An agreement can end while the contract continues.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <label>Draft (not yet in SAP)</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>VB ist aktiv</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>VB ist ausgelaufen</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>VB ist gekündigt</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>Prospektive Vereinbarung</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>VB ist erledigt</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>VB ist storniert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>