force-app/main/default/objects/ContractPosition__c/fields/SubsidyType__c.field-meta.xml
<CustomField>
    <fullName>SubsidyType__c</fullName>
    <description>Under which label the subsidy was agreed — early-bird bonus, marketing subsidy or regular. Functionally all the same: a fixed amount paid to the customer for promoting Darboven products. [Sources: MN-008, MN-001 Z.176-179]</description>
    <inlineHelpText>Under which label the subsidy was agreed — early-bird bonus, marketing subsidy or regular. Functionally all the same: a fixed amount paid to the customer for promoting Darboven products.</inlineHelpText>
    <label>Subsidy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>EarlyBird</fullName>
                <label>Early Bird</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <label>Marketing Subsidy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>