force-app/main/default/objects/ContractPosition__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Start of this individual agreement/obligation — may differ from the contract header. [Sources: MN-003 Z.512]</description>
    <inlineHelpText>Start of this individual agreement/obligation — may differ from the contract header.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>