force-app/main/default/objects/ContractPosition__c/fields/ValidityMonths__c.field-meta.xml
<CustomField>
    <fullName>ValidityMonths__c</fullName>
    <description>Over how many months the subsidy runs or is spread — one of the three details ZKS needs for the SAP creation. [Sources: MN-003 Z.782]</description>
    <inlineHelpText>Over how many months the subsidy runs or is spread — one of the three details ZKS needs for the SAP creation.</inlineHelpText>
    <label>Validity (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>