force-app/main/default/objects/ContractPosition__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>End of this individual agreement — expiry warning and renegotiation start here. [Sources: MN-003 Z.512]</description>
    <inlineHelpText>End of this individual agreement — expiry warning and renegotiation start here.</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>