force-app/main/default/objects/ContractPosition__c/fields/VolumeKg__c.field-meta.xml
<CustomField>
    <fullName>VolumeKg__c</fullName>
    <description>Reference quantity for variable subsidies (the amount grows with the volume). Irrelevant and hidden for fixed amounts. [Sources: MN-003 Z.641-647]</description>
    <inlineHelpText>Reference quantity for variable subsidies (the amount grows with the volume). Irrelevant and hidden for fixed amounts.</inlineHelpText>
    <label>Volume (kg)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>