force-app/main/default/objects/ContractPosition__c/listViews/All_Positions.listView-meta.xml
<ListView>
    <fullName>All_Positions</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>PositionType__c</columns>
    <columns>CommitmentRole__c</columns>
    <columns>Status__c</columns>
    <columns>ValidTo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Positions</label>
</ListView>