force-app/main/default/objects/ContractPosition__c/listViews/Index_Positions.listView-meta.xml
<ListView>
    <fullName>Index_Positions</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>IndexPct__c</columns>
    <columns>ReviewCycle__c</columns>
    <columns>NextReviewMonth__c</columns>
    <columns>LastPriceAdjustmentDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PositionType__c</field>
        <operation>equals</operation>
        <value>Index</value>
    </filters>
    <label>Index Positions</label>
</ListView>