force-app/main/default/objects/ContractPosition__c/listViews/Marketing_Subsidy_Positions.listView-meta.xml
<ListView>
    <fullName>Marketing_Subsidy_Positions</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>SubsidyType__c</columns>
    <columns>PayoutAmount__c</columns>
    <columns>ValidityMonths__c</columns>
    <columns>ERPAgreementNumber__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PositionType__c</field>
        <operation>equals</operation>
        <value>MarketingSubsidy</value>
    </filters>
    <label>Marketing Subsidy (WKZ) Positions</label>
</ListView>